--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ presskit_download_link                    : null                                
 app_icon                                  : assets/appicon.png
 app_name                                  : Jet Share
 app_price                                 : Free
-app_description                           : Fastest sharing app for your Android phone
+app_description                           : Fastest sharing app for your Android phone<br/> * Reviewed on <a href='https://taimienphi.vn/download-jet-share-91734'>taimienphi.vn</a>
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
